--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -14,7 +14,6 @@
 }
 
 body {
-  margin: 2rem;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
   font-size: 2rem;
@@ -22,6 +21,7 @@ body {
 }
 
 section {
+  margin: 2rem;
   max-width: 90vw;
 }
 
@@ -95,13 +95,13 @@ a:nth-of-type(11) {
 
 a:nth-of-type(1) {
   transform-style: preserve-3d;
-  background-color: orangered;
+  background-color: magenta;
 }
 
 /* animatie 2 */
 
 a:nth-of-type(2) {
-  background-color: green;
+  background-color: hotpink;
 }
 
 a:nth-of-type(2):hover {
@@ -120,7 +120,7 @@ a:nth-of-type(2):hover {
   border-radius: var(--pill);
   font-weight: normal;
   text-decoration: none;
-  background-color: rgb(186, 0, 0);
+  background-color: red;
   cursor: pointer;
 }
 
@@ -129,12 +129,239 @@ a:nth-of-type(2):hover {
   border-color: var(--primary);
 }
 
+
+/* animatie 4 */
+
 a:nth-of-type(3) {
-  background-color: rgb(137, 116, 0);
+  background-color: orange;
 }
 
 
-a:nth-of-type(3):hover {
+
+.turn {
   transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
   transition: 4s;
+}
+
+
+/* animatie 5 */
+
+a:nth-of-type(4) {
+  background-color: yellow;
+}
+
+.size {
+  animation: sizechanger 4s;
+}
+
+
+@keyframes sizechanger {
+  0% {
+    transform: scale(100%);
+  }
+
+  25% {
+    transform: scale(0%);
+  }
+
+  75% {
+    transform: scale(1000%);
+  }
+
+  100% {
+    transform: scale(100%);
+  }
+}
+
+
+/* animatie 6 */
+
+a:nth-of-type(5) {
+  background-color: lime;
+}
+
+
+.rotateXY {
+  animation: rotationer 5s;
+}
+
+@keyframes rotationer {
+  0% {
+    transform: rotateY(0deg);
+  }
+
+  100% {
+    transform: rotateY(14400deg);
+  }
+}
+
+
+/* kleurbalk */
+
+.sectioncolor {
+  width: 100%;
+  bottom: 0;
+  height: 10rem;
+}
+
+
+
+.kleuren {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  width: 5rem;
+  height: 5rem;
+  border: none;
+  cursor: pointer;
+}
+
+.white {
+  background-color: white;
+}
+
+.hotpink {
+  background-color: hotpink;
+}
+
+.magenta {
+  background-color: magenta;
+}
+
+.red {
+  background-color: red;
+}
+
+.orange {
+  background-color: orange;
+}
+
+.yellow {
+  background-color: yellow;
+}
+
+.lime {
+  background-color: lime;
+}
+
+.green {
+  background-color: green;
+}
+
+.turquoise {
+  background-color: turquoise;
+}
+
+.cyan {
+  background-color: cyan;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.darkblue {
+  background-color: darkblue;
+}
+
+.purple {
+  background-color: purple;
+}
+
+.black {
+  background-color: black;
+}
+
+
+/* animatie 7 */
+
+a:nth-of-type(6) {
+  background-color: green;
+}
+
+.down {
+  animation: down 10s;
+}
+
+@keyframes down {
+  0% {
+    transform: scale(1, 1) translateY(0);
+  }
+
+  10% {
+    transform: scale(0.8, 1.5) translateY(0);
+  }
+
+  30% {
+    transform: scale(1.5, 0.8) translateY(95vh);
+  }
+
+  50% {
+    transform: scale(0.8, 1.5) translateY(- 10px);
+  }
+
+  57% {
+    transform: scale(1, 1) translateY(10px);
+  }
+
+  100% {
+    transform: scale(1, 1) translateY(0);
+  }
+}
+
+
+
+/* animatie 8 */
+
+a:nth-of-type(7) {
+  background-color: turquoise;
+}
+
+/* animatie 9 */
+
+a:nth-of-type(8) {
+  background-color: cyan;
+}
+
+/* animatie 10*/
+
+a:nth-of-type(9) {
+  background-color: blue;
+}
+
+/* animatie 11*/
+
+a:nth-of-type(10) {
+  background-color: darkblue;
+}
+
+/* animatie 12*/
+
+a:nth-of-type(11) {
+  background-color: purple;
+}
+
+/* animatie 13*/
+
+a:nth-of-type(12) {
+  background-color: black;
+}
+
+
+video {
+  display: none;
+  width: 90%;
+}
+
+.play {
+  display: block;
+}
+
+.none-display {
+  display: none;
 }
